test/scc/ext/tm/semantic-errors/013.a
013.t:8:11: error: volatile objects cannot be used within _Atomic block